macros/tests/trybuild/impl.stderr
error: cannot use `serde_args::help` macro on impl block
 --> tests/trybuild/impl.rs:6:1
  |
6 | impl Foo {}
  | ^^^^^^^^^^^
