macros/tests/trybuild/impl.rs
use serde_args_macros::help;

struct Foo;

#[help]
impl Foo {}

fn main() {}
